--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "joi": "^17.10.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.0.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
