--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ APP_PORT=
 
 AUTHOR=''
 API_KEY=''
+ACCESS_TOKEN_SECRET_SIGNATURE=''
+ACCESS_TOKEN_SECRET_LIFE=''
+REFRESH_TOKEN_SECRET_SIGNATURE=''
+REFRESH_TOKEN_SECRET_LIFE=''
