--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,12 @@ APP_HOST=''
 APP_PORT=
 
 AUTHOR=''
-API_KEY=''
+MAIL_API_KEY=''
 ACCESS_TOKEN_SECRET_SIGNATURE=''
 ACCESS_TOKEN_SECRET_LIFE=''
 REFRESH_TOKEN_SECRET_SIGNATURE=''
 REFRESH_TOKEN_SECRET_LIFE=''
+
+CLOUD_NAME=''
+CLOUD_API_KEY = ''
+CLOUD_API_KEY_SECRET = ''
