--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "nodejs-expressjs-mongodb-base-project",
   "private": true,
   "version": "1.0.0",
-  "author": "TrungQuanDev - Một Lập Trình Viên",
-  "description": "https://youtube.com/@trungquandev",
+  "author": "minhlc1108",
+  "description": "",
   "engines": {
     "node": ">=18.x"
   },
