--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongodb": "^6.0.0",
     "multer": "^2.0.2",
     "sib-api-v3-sdk": "^8.5.0",
+    "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "uuid": "^10.0.0"
   },
